<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scan Productos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Scanear"/>
    <string name="TextView_Producto_Vacio">Ingrese Producto</string>
    <string name="buton_Buscar_Producto">Buscar Producto</string>
    <string name="editText_Cantidad_Vacio">Ingrese cantidad</string>
    <string name="button_Guardar">Guardar</string>
    <string name="migrar_SD">Migrar a SD</string>
     <string name="Cantidad">Cantidad:</string>
    <string name="Detalle">Detalle:</string>
    <string name="editText_Detalle_Vacio">Ingrese Detalle</string>
    <string name="Consultar_Listado">Consultar Listado</string>

</resources>
